--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,17 @@
   font-size: 14pt; }
 
 .title {
-  text-align: center;
+  text-align: left;
   font-size: 30px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  display: inline-block; }
+
+.time {
+  float: right;
+  color: #eee;
+  font-size: 8pt;
+  text-align: right;
+  margin-top: 5px; }
 
 .form--type {
   display: inline-block;
