--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,15 +6,15 @@
 .title {
   text-align: left;
   font-size: 30px;
-  margin-bottom: 10px;
-  display: inline-block; }
+  margin-bottom: 10px; }
 
 .time {
-  float: right;
-  color: #eee;
+  color: #aaa;
   font-size: 8pt;
   text-align: right;
-  margin-top: 5px; }
+  position: absolute;
+  top: 14px;
+  right: 10px; }
 
 .form--type {
   display: inline-block;
