--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,14 +8,14 @@
 	text-align: left;
 	font-size: 30px;
 	margin-bottom: 10px;
-	display: inline-block;
 }
 .time {
-	float: right;
-	color: #eee;
+	color: #aaa;
 	font-size: 8pt;
 	text-align: right;
-	margin-top: 5px;
+	position: absolute;
+	top: 14px;
+	right: 10px;
 }
 .form {
 	&--type {
