--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,8 @@ body {
   text-align: left;
   font-size: 30px;
   vertical-align: middle;
-  display: inline-block; }
+  display: inline-block;
+  margin-bottom: 0.5rem; }
 
 .centered {
   text-align: center;
@@ -86,7 +87,7 @@ body {
     font-size: 30px;
     width: 100px; }
   .form--task .btn {
-    font-size: 30px;
+    font-size: 24px;
     margin-top: 10px;
     display: block;
     float: right; }
