--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -74,6 +74,7 @@ body {
 	font-size: 30px;
 	vertical-align: middle;
 	display: inline-block;
+	margin-bottom: 0.5rem;
 }
 .centered {
 	text-align: center;
@@ -109,7 +110,7 @@ body {
 		}
 		
 		.btn {
-			font-size: 30px;
+			font-size: 24px;
 			margin-top: 10px;
 			display: block;
 			float: right;
