--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,8 @@ body {
   vertical-align: middle;
   display: inline-block;
   margin-bottom: 0.5rem; }
+  .title--small {
+    font-size: 24px; }
 
 .centered {
   text-align: center;
@@ -129,11 +131,29 @@ body {
   .results-list .right {
     color: #00a; }
 
-.new-test-btn {
-  font-size: 30px; }
+.message-container .btn {
+  font-size: 24px; }
+  .message-container .btn.tests-report {
+    float: left; }
+  .message-container .btn.new-test-btn {
+    float: right; }
+
+.report-container .new-test-btn {
+  font-size: 24px;
+  float: right; }
 
 .hidden {
   display: none !important; }
+
+.table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 0.5rem; }
+  .table.table-bordered td {
+    border: 1px solid #000;
+    padding: 3px 6px;
+    font-size: 20px;
+    text-align: right; }
 
 @media screen and (min-width: 768px) {
   .mobile-only {
