--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,6 +75,9 @@ body {
 	vertical-align: middle;
 	display: inline-block;
 	margin-bottom: 0.5rem;
+	&--small {
+		font-size: 24px;
+	}
 }
 .centered {
 	text-align: center;
@@ -163,12 +166,41 @@ body {
 	}
 }
 
-.new-test-btn {
-	font-size: 30px;
+.message-container {
+	.btn {
+		font-size: 24px;
+		&.tests-report {
+			float: left;
+		}
+		&.new-test-btn {
+			float: right;
+		}
+	}
+}
+
+.report-container {
+	.new-test-btn {
+		font-size: 24px;
+		float: right;
+	}
 }
 
 .hidden {
 	display: none !important;
+}
+
+.table {
+	border-collapse: collapse;
+	width: 100%;
+	margin-bottom: 0.5rem;
+	&.table-bordered {
+		td {
+			border: 1px solid #000;
+			padding: 3px 6px;
+			font-size: 20px;
+			text-align: right;
+		}
+	}
 }
 
 @media screen and (min-width: 768px) {
