--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,10 +149,10 @@ body {
   border-collapse: collapse;
   width: 100%;
   margin-bottom: 0.5rem; }
-  .table.table-bordered td {
+  .table.table-bordered th, .table.table-bordered td {
     border: 1px solid #000;
     padding: 3px 6px;
-    font-size: 20px;
+    font-size: 16px;
     text-align: right; }
 
 @media screen and (min-width: 768px) {
