--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -194,10 +194,10 @@ body {
 	width: 100%;
 	margin-bottom: 0.5rem;
 	&.table-bordered {
-		td {
+		th, td {
 			border: 1px solid #000;
 			padding: 3px 6px;
-			font-size: 20px;
+			font-size: 16px;
 			text-align: right;
 		}
 	}
