--- a/src/index.scss
+++ b/src/index.scss
@@ -10,20 +10,33 @@ body {
 	font-size: 1.8rem;
 }
 
+.mb-3 {
+	margin-bottom: 1rem;
+}
+.mtb-5 {
+	margin-top: 2.4rem;
+	margin-bottom: 2.4rem;
+}
+
 .btn {
 	border-radius: 7px;
 	border-style: solid;
 	border-width: 1px;
-	height: 36px;
 	color: #fff;
 	display: inline-block;
-	height: 30px;
-	width: 30px;
+	height: 3rem;
 	vertical-align: top;
 	margin-right: 0.5rem;
 	&--secondary {
 		background-color: $secondaryBgn;
 		border-color: $secondaryBrd;
+	}
+	&--tiny {
+		width: 3rem;
+	}
+	&--large-font {
+		font-size: 2.4rem;
+		height: 3.6rem;
 	}
 }
 
@@ -89,16 +102,68 @@ body {
 		width: calc(100% - 7.5rem);
 		font-size: 2rem;
 	}
+	&--question {
+		text-align: right;
+	}
 	&__label {
-		width: 15rem;
+		min-width: 12rem;
 		text-align: right;
 		margin-right: 1rem;
+		&--question {
+			display: inline-block;
+			margin-right: 1rem;
+			font-size: 3rem;
+		}
+		&-item {
+			margin-right: 0.5rem;
+		}
 	}
 	&__input {
-		width: calc(100% - 12rem);
 		height: 2.5rem;
+		&--medium {
+			width: 10rem;
+		}
+		&--wide {
+			width: calc(100% - 12rem);
+		}
+		&--large-font {
+			font-size: 3rem;
+		}
 	}
 }
+
+.results {
+	text-align: center;
+	padding: 0.3rem 0.6rem;
+	border-radius: 0.7rem;
+	margin-bottom: 1rem;
+	font-size: 2.4rem !important;
+	position: relative;
+	&__cell {
+		padding: 0 0.6rem;
+		&--left {
+			text-align: left;
+		}
+		&--right {
+			text-align: right;
+		}
+	}
+	&__answer {
+		margin-right: 1rem;
+		&--correct {
+			color: #0a0;
+		}
+		&--incorrect {
+			color: #a00;
+			text-decoration: line-through;
+		}
+		&--correction {
+			color: #00a;
+		}
+	}
+}
+
+
 
 @media screen and (max-width: 767px) {
 	.screen-only {
