--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,9 @@ body {
 	margin-top: 2.4rem;
 	margin-bottom: 2.4rem;
 }
+.align-right {
+	text-align: right;
+}
 
 .btn {
 	border-radius: 7px;
@@ -163,6 +166,24 @@ body {
 		&--correction {
 			color: #00a;
 		}
+	}
+}
+
+.report {
+	&__operation-title {
+		margin-top: 1.5rem;
+		margin-bottom: 0.5rem;
+	}
+}
+
+.table {
+	border-collapse: collapse;
+	width: 100%;
+	font-size: 1.6rem;
+	th, td {
+		border-collapse: collapse;
+		border: 1px solid #000;
+		padding: 0.3rem 0.6rem;
 	}
 }
 
