--- a/src/index.scss
+++ b/src/index.scss
@@ -22,14 +22,14 @@ body {
 }
 
 .btn {
+	display: inline-block;
+	height: 3rem;
+	margin-right: 0.5rem;
+	vertical-align: top;
+	color: #fff;
 	border-radius: 7px;
 	border-style: solid;
 	border-width: 1px;
-	color: #fff;
-	display: inline-block;
-	height: 3rem;
-	vertical-align: top;
-	margin-right: 0.5rem;
 	&--secondary {
 		background-color: $secondaryBgn;
 		border-color: $secondaryBrd;
@@ -38,15 +38,15 @@ body {
 		width: 3rem;
 	}
 	&--large-font {
-		font-size: 2.4rem;
 		height: 3.6rem;
+		font-size: 2.4rem;
 	}
 }
 
 .title {
 	display: inline-block;
-	font-size: 3rem;
 	vertical-align: middle;
+	font-size: 3rem;
 	font-weight: normal;
 	&--smaller {
 		font-size: 2.4rem;
@@ -72,34 +72,34 @@ body {
 		padding: 2rem;
 	}
 	&__item {
-		background-color: #ccc;
 		margin-bottom: 2rem;
+		background-color: #ccc;
 		&--active {
 			font-weight: bold;
 		}
 	}
 	&__link {
+		display: block;
+		padding: 1.2rem;
 		color: #000;
 		text-decoration: none;
-		padding: 1.2rem;
-		display: block;
 	}
 }
 
 .header {
-	overflow: hidden;
-	border-bottom: 1px solid #aaa;
 	margin-bottom: 1rem;
+	overflow: hidden;
 	line-height: 3rem;
+	border-bottom: 1px solid #aaa;
 	&--bottom-padding {
 		padding-bottom: 10px;
 	}
 }
 
 .progress-indicator {
-	font-size: 24px;
 	display: inline-block;
 	float: right;
+	font-size: 2.4rem;
 }
 
 .form {
@@ -113,8 +113,8 @@ body {
 	}
 	&__label {
 		min-width: 12rem;
-		text-align: right;
 		margin-right: 1rem;
+		text-align: right;
 		&--question {
 			display: inline-block;
 			margin-right: 1rem;
@@ -139,12 +139,12 @@ body {
 }
 
 .results {
-	text-align: center;
-	padding: 0.3rem 0.6rem;
-	border-radius: 0.7rem;
-	margin-bottom: 1rem;
-	font-size: 2.4rem !important;
 	position: relative;
+	margin-bottom: 1rem;
+	padding: 0.3rem 0.6rem;
+	font-size: 2.4rem !important;
+	text-align: center;
+	border-radius: 0.7rem;
 	&__cell {
 		padding: 0 0.6rem;
 		&--left {
@@ -177,13 +177,13 @@ body {
 }
 
 .table {
-	border-collapse: collapse;
 	width: 100%;
+	border-collapse: collapse;
 	font-size: 1.6rem;
 	th, td {
+		padding: 0.3rem 0.6rem;
 		border-collapse: collapse;
 		border: 1px solid #000;
-		padding: 0.3rem 0.6rem;
 	}
 }
 
@@ -195,6 +195,7 @@ body {
 	}
 	.grid {
 		display: grid;
+		height: 100vh;
 		grid-template-columns: 60% 100%;
 		will-change: transform;
 		align-content: center;
@@ -203,18 +204,17 @@ body {
 		scroll-snap-points-x: repeat(100%);
 		scroll-snap-type: x mandatory;
 		-webkit-overflow-scrolling: touch;
-		height: 100vh;
 		
 		&__container {
 			width: calc(100vw - 1.6rem);
-			max-width: unset;
-			padding: 0.8rem;
 			height: calc(100vh - 1.6rem);
+			max-width: unset;
 			margin: 0;
+			padding: 0.8rem;
 			scroll-snap-align: start;
 			&--first {
-				background-color: #333;
 				width: calc(60vw - 1.6rem);
+				background-color: #333;
 			}
 			&--last {
 				background-color: #fff;
@@ -231,23 +231,23 @@ body {
 		display: none;
 	}
 	.wrapper {
-		width: 720px;
+		width: 72rem;
 		height: 100vh;
 	}
 	.grid__container {
 		display: inline-block;
 		vertical-align: top;
 		&--first {
-			width: 200px;
+			width: 21rem;
 			height: 100%;
-			background-color: #333;
 			margin-right: 10px;
+			background-color: #333;
 			.menu {
 				padding: 0 10px;
 			}
 		}
 		&--last {
-			width: 500px;
+			width: 50rem;
 			padding-top: 10px;
 		}
 	}
